--- a/events-page.html
+++ b/events-page.html
@@ -313,11 +313,11 @@
                         </div>
                         <div class="row form-row-min-width">
                             <form action="#" id="form-write">
-                                <div class="form-row d-flex align-items-end">
+                                <div class="form-row">
                                     <div class="form-group col-sm pr-md-4">
                                         <div class="input-group">
-                                            <label for="name" class="label-placeholder">ваше имя</label>
-                                            <input type="text" name="name" id="name" class="form-control">
+                                            <label for="user-name" class="label-placeholder">ваше имя</label>
+                                            <input type="text" name="user_name" id="user-name" class="form-control">
                                         </div>
                                         <div class="input-group">
                                             <label for="phone" class="label-placeholder">НОМЕР ТЕЛЕФОНА</label>
